...
    private var segmentedControlFilterAnime : UISegmentedControl!
    private var segmentedControlTypeManga : UISegmentedControl!
    private var segmentedControlFilterManga : UISegmentedControl!
    private var tableviewListShow : UITableView!
    var arrayAnimeData = Array<listData>()
    var arrayMangaData = Array<listData>()
    var arrayAnimeType = ["tv", "movie", "ova", "special", "ona", "music"]
    var arrayAnimeFilter = ["airing", "upcoming", "bypopularity", "favorite"]
    var arrayMangaType = ["manga", "novel", "lightnovel", "oneshot", "doujin", "manhwa", "manhua"]
    var arrayMangaFilter = ["publishing", "upcoming", "bypopularity", "favorite"]

    var selectAnimeType = ""
    var selectAnimeFilter = ""
    var selectMangaType = ""
    var selectMangaFilter = ""

...
        setupListShowTable()
        getUserData()
        getData()
    }
    
    func setupUI() {
        segmentedControlSelect = UISegmentedControl(items: ["Top Anime", "Top Manga"])
        segmentedControlSelect.selectedSegmentTintColor = UIColor(hexString: "#39FFED")
        segmentedControlSelect.backgroundColor = UIColor(hexString: "#DDDDDD")
        let titleTextAttributes = [NSAttributedString.Key.foregroundColor: UIColor.black]
        segmentedControlSelect.setTitleTextAttributes(titleTextAttributes, for:.normal)
        segmentedControlSelect.addTarget(self, action: #selector(segmenteSelectChange), for: .valueChanged)
        segmentedControlSelect.selectedSegmentIndex = 0
...
